# agentspecs

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agentspecs/: __init__.py  __version__.py
agentspecs/agents/: analyze-campaign-performance.yaml  analyze-support-tickets.yaml  audit-inventory-levels.yaml  automate-regulatory-reporting.yaml  classify-route-emails.yaml  comprehensive-sales-analytics.yaml  crawler.yaml  data-acquisition.yaml  datalayer-agent.yaml  demo-evals.yaml  demo-full.yaml  demo-guardrails.yaml  demo-hooks.yaml  demo-mcp.yaml  demo-monitoring.yaml  demo-one-trigger-approval.yaml  demo-one-trigger.yaml  demo-output.yaml  demo-outputs.yaml  demo-parameters.yaml  demo-simple.yaml  demo-subagents.yaml  demo-tavily-codemode.yaml  demo-tavily-no-codemode.yaml  end-of-month-performance.yaml  eval-experiment-runner.yaml  eval-synthetic-runner.yaml  example-a2ui-agent.yaml  example-agentic-chat.yaml  example-agentic-generative-ui.yaml  example-backend-tool-rendering.yaml  example-codemode.yaml  example-evals-nocodemode.yaml  example-evals-nocodmode.yaml  example-evals.yaml  example-full.yaml  example-guardrails.yaml  example-haiku-generative-ui.yaml  example-hooks.yaml  example-human-in-the-loop.yaml  (+104 more)
agentspecs/benchmarks/: agentbench.yaml  gpqa-diamond.yaml  humaneval.yaml  mmlu.yaml  swe-bench-verified.yaml  swe-bench.yaml  toolbench.yaml  truthfulqa.yaml
agentspecs/envvars/: ALPHAVANTAGE_API_KEY.yaml  DATALAYER_API_KEY.yaml  GITHUB_TOKEN.yaml  GOOGLE_OAUTH_CLIENT_ID.yaml  GOOGLE_OAUTH_CLIENT_SECRET.yaml  HF_TOKEN.yaml  KAGGLE_TOKEN.yaml  SLACK_BOT_TOKEN.yaml  SLACK_CHANNEL_IDS.yaml  SLACK_TEAM_ID.yaml  TAVILY_API_KEY.yaml
agentspecs/evals/: agentbench.yaml  confusion-matrix-evaluator.yaml  contains.yaml  equals-expected.yaml  equals.yaml  gpqa-diamond.yaml  has-matching-span.yaml  humaneval.yaml  is-instance.yaml  llm-judge.yaml  max-duration.yaml  mmlu.yaml  precision-recall-evaluator.yaml  swe-bench-verified.yaml  swe-bench.yaml  toolbench.yaml  truthfulqa.yaml
agentspecs/events/: agent-ended.yaml  agent-started.yaml  tool-approval-requested.yaml
agentspecs/frontend-tools/: jupyter-notebook.yaml  lexical-document.yaml
agentspecs/loops/: __init__.py  (+4 more)
docs/: Makefile  README.md  docusaurus.config.js  package.json
tests/: __init__.py  conftest.py
(+196 files in other folders)
